--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
   "devDependencies": {
     "husky": "^8.0.2",
     "jest": "^27.5.1",
-    "jest-extended": "^2.0.0"
+    "jest-extended": "^2.0.0",
+    "prettier": "3.6.2"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
-    "pg": "^8.13.3"
+    "pg": "^8.13.3",
+    "pg-format": "^1.0.4"
   },
-   "jest": {
+  "jest": {
     "setupFilesAfterEnv": [
       "jest-extended/all"
     ]
