--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "husky": "^8.0.2",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
-    "prettier": "3.6.2"
+    "prettier": "3.6.2",
+    "supertest": "^7.1.4"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "pg": "^8.13.3",
     "pg-format": "^1.0.4"
   },
