--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "seed-dev": "node ./db/seeds/run-seed.js",
     "test": "jest --runInBand",
     "prepare": "husky install",
-    "start": "node listener.js",
+    "start": "node listen.js",
     "test-seed": "jest seed.test.js"
   },
   "repository": {
