--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "jest --runInBand",
     "prepare": "husky install",
     "start": "node listen.js",
+    "seed-prod": "NODE_ENV=production npm run seed",
+    "seed": "node ./db/seeds/run-seed.js",
     "test-seed": "jest seed.test.js"
   },
   "repository": {
